<resources>
    <string name="app_name" translatable="false">Chat</string>
    <string name="error_occurred_please_retry">Error occurred, please retry</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="login_name">Login Name</string>
    <string name="to_register">To Register</string>
    <string name="register_success">Register Success!</string>
    <string name="personMessage">Message</string>
    <string name="settings">Settings</string>
    <string name="search_person">Search Person</string>
    <string name="search">Search</string>
    <string name="please_input_person_login_name">Please input person login name</string>
    <string name="choose_to_start_conversation">Choose to start conversation</string>
    <string name="start_conversation">Start conversation</string>
    <string name="login_success">Login success!</string>
    <string name="create_conversation_success">Create conversation success!</string>
    <string name="nickname">Nickname</string>
    <string name="send">Send</string>
    <string name="please_input_content">Please input content</string>
    <string name="please_input_here">Please input here</string>
    <string name="permission_denied_record_audio">Permission denied: Record audio</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>
    <string name="please_update">Please update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="size">Size</string>
    <string name="recording">Recording</string>
</resources>