<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.message.dialogperson.DialogActivity">

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/nickname"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="34dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/relative_tool_buttons"
        android:layout_below="@id/tv_nickname" />

    <RelativeLayout
        android:id="@+id/relative_tool_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_input"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/audio" />

        <Button
            android:id="@+id/btn_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/btn_audio"
            android:text="@string/image" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_send"
        android:hint="@string/please_input_here"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:padding="12dp"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send" />
</RelativeLayout>